# Programming_paradigms

TheFirstAssignment/: CMakeLists.txt  control_questions.md  main.c  text_editor.c  text_editor.cpp  text_editor.h
TheFourthAssignment/: CMakeLists.txt  README.md  caesar.cpp  caesar_cipher.cpp  caesar_cipher.h  encrypted.txt  main.cpp  text_editor.cpp  text_editor.h
TheSecondAssignment/: CMakeLists.txt  README.md  main.cpp  text_editor.cpp  text_editor.h
TheThirdAssignment/: CMakeLists.txt  README.md  caesar.cpp  caesar.h  main.cpp
